--- a/src/Login.css
+++ b/src/Login.css
@@ -1,11 +1,15 @@
 .Login{
 	align-items: left;
-	margin-top:200px;
-	margin-left: 250px;
-	margin-right: 200px;
+	margin-top: 7%;
+	margin-left: 10%;
+	margin-right: 10%;
+	border: 25px solid #17a2b8;
+	border-radius: 10px;
 
-	padding-left: 100px;
-	padding-right: 500px;
-	width:90%;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	padding-left:15%;
+	padding-right: 15%;
+	width:80%;
 	text-align: left;
 }
